-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.6.0
-
None
-
3
-
13112
BUG: unable to handle kernel NULL pointer dereference at 0000000000000020^M
IP: [<ffffffffa077243d>] lfsck_exec_oit+0x6d/0x9e0 [lfsck]^M
PGD 0 ^M
Oops: 0000 1 SMP ^M
last sysfs file: /sys/devices/LNXSYSTM:00/LNXSYBUS:00/PNP0C0A:00/power_supply/BAT0/energy_full^M
CPU 1 ^M
Modules linked in: lustre(U) ofd(U) osp(U) lod(U) ost(U) mdt(U) mdd(U) mgs(U) nodemap(U) osd_ldiskfs(U) ldiskfs(U) lquota(U) lfsck(U) obdecho(U) mgc(U) lov(U) osc(U) mdc(U) lmv(U) fid(U) fld(U) ptlrpc(U) obdclass(U) ksocklnd(U) lnet(U)
libcfs(U) jbd(U) sha512_generic(U) sha256_generic(U) crc32c_intel(U) nfsd(U) lockd(U) nfs_acl(U) auth_rpcgss(U) exportfs(U) autofs4(U) sunrpc(U) libfc(U) scsi_transport_fc(U) 8021q(U) scsi_tgt(U) garp(U) stp(U) llc(U) ipv6(U) microcode(
U) sg(U) lpc_ich(U) mfd_core(U) e1000(U) ext4(U) jbd2(U) mbcache(U) sr_mod(U) cdrom(U) sd_mod(U) crc_t10dif(U) uhci_hcd(U) ahci(U) ata_generic(U) ata_piix(U) ehci_hcd(U) dm_mirror(U) dm_region_hash(U) dm_log(U) dm_mod(U) [last unloaded:
libcfs]^M
^M
Pid: 18503, comm: lfsck Not tainted 2.6.32 #2 Parallels Software International Inc. Parallels Virtual Platform/Parallels Virtual Platform^M
RIP: 0010:[<ffffffffa077243d>] [<ffffffffa077243d>] lfsck_exec_oit+0x6d/0x9e0 [lfsck]^M
RSP: 0018:ffff88010f71bcc0 EFLAGS: 00010206^M
RAX: 0000000000000000 RBX: ffff88010146e9c0 RCX: 0000000000000000^M
RDX: ffff880117b96560 RSI: ffff8801095e4068 RDI: ffff88010146e9c0^M
RBP: ffff88010f71bd20 R08: 5a5a5a5a5a5a5a5a R09: 5a5a5a5a5a5a5a5a^M
R10: 5a5a5a5a5a5a5a5a R11: 5a5a5a5a5a5a5a5a R12: ffff880117b96560^M
R13: ffff8801095e4000 R14: ffff8801095e4068 R15: ffff8801095e4038^M
FS: 0000000000000000(0000) GS:ffff88002c020000(0000) knlGS:0000000000000000^M
CS: 0010 DS: 0018 ES: 0018 CR0: 000000008005003b^M
CR2: 0000000000000020 CR3: 0000000102c2f000 CR4: 00000000001406e0^M
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000^M
DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400^M
Process lfsck (pid: 18503, threadinfo ffff88010f71a000, task ffff880123bc0080)^M
Stack:^M
ffffc90000000000 00000000000000c9 ffffc90002e7b018 ffff880116936000^M
<d> ffff88010146e9c0 ffff880117b965d8 ffff88010f2f2800 ffff8801095e4000^M
<d> ffff88010146e9c0 ffff880117b96560 ffff88010f2f2800 ffffffffa0ad0bc0^M
Call Trace:^M
[<ffffffffa077d51c>] lfsck_master_oit_engine+0xb6c/0x1600 [lfsck]^M
[<ffffffff814c3ecd>] ? thread_return+0x4e/0x771^M
[<ffffffffa077e31a>] lfsck_master_engine+0x36a/0x6d0 [lfsck]^M
[<ffffffff814c3ecd>] ? thread_return+0x4e/0x771^M
[<ffffffff81065b60>] ? default_wake_function+0x0/0x20^M
[<ffffffffa077dfb0>] ? lfsck_master_engine+0x0/0x6d0 [lfsck]^M
[<ffffffff8109ae26>] kthread+0x96/0xa0^M
[<ffffffff8100c20a>] child_rip+0xa/0x20^M
[<ffffffff8109ad90>] ? kthread+0x0/0xa0^M
[<ffffffff8100c200>] ? child_rip+0x0/0x20^M
Code: 00 4d 8b 75 38 4d 8d 7d 38 4d 39 fe 75 10 eb 5e 66 0f 1f 44 00 00 4d 8b 36 4d 39 fe 74 50 49 8b 46 78 4c 89 e2 4c 89 f6 48 89 df <ff> 50 20 85 c0 74 e4 f6 05 b9 32 4b 00 01 74 22 f6 05 ae 32 4b ^M
- is related to
-
LU-4736 sanity-lfsck test_18c: MDS1 is not the expected 'completed'
-
- Resolved
-