lustre/lfsck/lfsck_lib.c
@@ -658,7 +658,7 @@ int lfsck_create_lpf(const struct lu_env *env, struct lfsck_instance *lfsck)
 
 		ltd = lfsck_tgt_get(&lfsck->li_mdt_descs, 0);
 		if (unlikely(ltd == NULL))
-			RETURN(-ENODEV);
+			RETURN(-ENXIO);
 
 		parent = lfsck_object_find_by_dev(env, ltd->ltd_tgt,
 						  &LU_LPF_FID);
@@ -748,7 +748,7 @@ static int lfsck_fid_init(struct lfsck_instance *lfsck)
 
 	ss = lu_site2seq(lfsck->li_bottom->dd_lu_dev.ld_site);
 	if (unlikely(ss == NULL))
-		RETURN(-ENODEV);
+		RETURN(-ENXIO);
 
 	OBD_ALLOC_PTR(lfsck->li_seq);
 	if (lfsck->li_seq == NULL)
@@ -1444,6 +1444,7 @@ static void lfsck_interpret(const struct lu_env *env,
 	struct lfsck_async_interpret_args *laia = args;
 	struct lfsck_component		  *com;
 
+	LASSERT(laia->laia_com == NULL);
 	LASSERT(laia->laia_shared);
 
 	spin_lock(&lfsck->li_lock);
@@ -1471,8 +1472,7 @@ int lfsck_double_scan(const struct lu_env *env, struct lfsck_instance *lfsck)
 	int			rc  = 0;
 	int			rc1 = 0;
 
-	cfs_list_for_each_entry_safe(com, next, &lfsck->li_list_double_scan,
-				     lc_link) {
+	list_for_each_entry(com, &lfsck->li_list_double_scan, lc_link) {
 		if (lfsck->li_bookmark_ram.lb_param & LPF_DRYRUN)
 			com->lc_journal = 0;
 
@@ -1484,6 +1484,17 @@ int lfsck_double_scan(const struct lu_env *env, struct lfsck_instance *lfsck)
 	l_wait_event(lfsck->li_thread.t_ctl_waitq,
 		     atomic_read(&lfsck->li_double_scan_count) == 0,
 		     &lwi);
+
+	if (lfsck->li_status != LS_PAUSED &&
+	    lfsck->li_status != LS_CO_PAUSED) {
+		list_for_each_entry_safe(com, next, &lfsck->li_list_double_scan,
+					 lc_link) {
+			spin_lock(&lfsck->li_lock);
+			list_del_init(&com->lc_link);
+			list_add_tail(&com->lc_link, &lfsck->li_list_idle);
+			spin_unlock(&lfsck->li_lock);
+		}
+	}
 
 	return rc1 != 0 ? rc1 : rc;
 }
@@ -1539,12 +1550,23 @@ void lfsck_quit(const struct lu_env *env, struct lfsck_instance *lfsck)
 				 lc_link) {
 		if (com->lc_ops->lfsck_quit != NULL)
 			com->lc_ops->lfsck_quit(env, com);
+
+		spin_lock(&lfsck->li_lock);
+		list_del_init(&com->lc_link);
+		list_del_init(&com->lc_link_dir);
+		list_add_tail(&com->lc_link, &lfsck->li_list_idle);
+		spin_unlock(&lfsck->li_lock);
 	}
 
 	list_for_each_entry_safe(com, next, &lfsck->li_list_double_scan,
 				 lc_link) {
 		if (com->lc_ops->lfsck_quit != NULL)
 			com->lc_ops->lfsck_quit(env, com);
+
+		spin_lock(&lfsck->li_lock);
+		list_del_init(&com->lc_link);
+		list_add_tail(&com->lc_link, &lfsck->li_list_idle);
+		spin_unlock(&lfsck->li_lock);
 	}
 }
 
@@ -1637,7 +1659,7 @@ int lfsck_get_speed(struct dt_device *key, void *buf, int len)
 			      lfsck->li_bookmark_ram.lb_speed_limit);
 		lfsck_instance_put(&env, lfsck);
 	} else {
-		rc = -ENODEV;
+		rc = -ENXIO;
 	}
 
 	lu_env_fini(&env);
@@ -1665,7 +1687,7 @@ int lfsck_set_speed(struct dt_device *key, int val)
 		mutex_unlock(&lfsck->li_mutex);
 		lfsck_instance_put(&env, lfsck);
 	} else {
-		rc = -ENODEV;
+		rc = -ENXIO;
 	}
 
 	lu_env_fini(&env);
@@ -1691,7 +1713,7 @@ int lfsck_get_windows(struct dt_device *key, void *buf, int len)
 			      lfsck->li_bookmark_ram.lb_async_windows);
 		lfsck_instance_put(&env, lfsck);
 	} else {
-		rc = -ENODEV;
+		rc = -ENXIO;
 	}
 
 	lu_env_fini(&env);
@@ -1729,7 +1751,7 @@ int lfsck_set_windows(struct dt_device *key, int val)
 		}
 		lfsck_instance_put(&env, lfsck);
 	} else {
-		rc = -ENODEV;
+		rc = -ENXIO;
 	}
 
 	lu_env_fini(&env);
@@ -1762,7 +1784,7 @@ int lfsck_dump(struct dt_device *key, void *buf, int len, enum lfsck_type type)
 
 		lfsck_instance_put(&env, lfsck);
 	} else {
-		rc = -ENODEV;
+		rc = -ENXIO;
 	}
 
 	lu_env_fini(&env);
@@ -1979,7 +2001,7 @@ int lfsck_start(const struct lu_env *env, struct dt_device *key,
 
 	lfsck = lfsck_instance_find(key, true, false);
 	if (unlikely(lfsck == NULL))
-		RETURN(-ENODEV);
+		RETURN(-ENXIO);
 
 	/* System is not ready, try again later. */
 	if (unlikely(lfsck->li_namespace == NULL))
@@ -2255,7 +2277,7 @@ int lfsck_stop(const struct lu_env *env, struct dt_device *key,
 
 	lfsck = lfsck_instance_find(key, true, false);
 	if (unlikely(lfsck == NULL))
-		RETURN(-ENODEV);
+		RETURN(-ENXIO);
 
 	thread = &lfsck->li_thread;
 	/* release lfsck::li_mutex to avoid deadlock. */
@@ -2348,7 +2370,7 @@ int lfsck_in_notify(const struct lu_env *env, struct dt_device *key,
 
 		lfsck = lfsck_instance_find(key, true, false);
 		if (unlikely(lfsck == NULL))
-			RETURN(-ENODEV);
+			RETURN(-ENXIO);
 
 		com = lfsck_component_find(lfsck, lr->lr_active);
 		if (likely(com != NULL)) {
@@ -2377,7 +2399,7 @@ int lfsck_query(const struct lu_env *env, struct dt_device *key,
 
 	lfsck = lfsck_instance_find(key, true, false);
 	if (unlikely(lfsck == NULL))
-		RETURN(-ENODEV);
+		RETURN(-ENXIO);
 
 	com = lfsck_component_find(lfsck, lr->lr_active);
 	if (likely(com != NULL)) {
@@ -2397,7 +2419,7 @@ int lfsck_register_namespace(const struct lu_env *env, struct dt_device *key,
 			     struct ldlm_namespace *ns)
 {
 	struct lfsck_instance  *lfsck;
-	int			rc	= -ENODEV;
+	int			rc	= -ENXIO;
 
 	lfsck = lfsck_instance_find(key, true, false);
 	if (likely(lfsck != NULL)) {
